Change 517 on 2000/05/15 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Search
	- fix bug in ->as_struct introduced by new code in Net::LDAP::Entry

Change 516 on 2000/05/12 by <gbarr@pobox.com> (Graham Barr)

	Release 0.17

Change 512 on 2000/05/09 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Change to use asn_read (needs patch to Convert::ASN::IO)

Change 511 on 2000/05/09 by <gbarr@pobox.com> (Graham Barr)

	Change email/url's to point to sourceforge

Change 507 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Check return value of asn_recv for defined not truth
	  as on some systems the return value may be ''

Change 506 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Schema (patch from Chris Ridd)
	- Fix sup to always be an array ref
	- add ->superclasses() method

Change 505 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Fix bug in ->unbind() where $mesg was not being passed to _sendmsg()
	- Added debug values 4 and 8 to dump with asn_dump()

Change 496 on 2000/04/27 by <gbarr@pobox.com> (Graham Barr)

	Release 0.16

Change 495 on 2000/04/18 by <gbarr@pobox.com> (Graham Barr)

	- fix Controls critical value
	- fix debug calls

Change 494 on 2000/04/18 by <gbarr@pobox.com> (Graham Barr)

	Added VirtualListView and PAged controls

Change 491 on 2000/04/17 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Control::Sort
	- fix typos
	- evaluate @order before deleting $self->{order}.
	  Otherwise $_[0] may become undef

Change 489 on 2000/04/12 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- control option will now call ->to_asn on blessed controls

Change 488 on 2000/04/12 by <gbarr@pobox.com> (Graham Barr)

	Added Bundle::Net::LDAP

Change 487 on 2000/04/12 by <gbarr@pobox.com> (Graham Barr)

	Add HTML docs and ppd to MANIFEST

Change 486 on 2000/04/11 by <gbarr@pobox.com> (Graham Barr)

	Rename Net::LDAP::Control::sort to Net::LDAP::Control::Sort

Change 485 on 2000/04/11 by <gbarr@pobox.com> (Graham Barr)
